--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <div id="root">
+    <script type="module" src="/src/main.jsx"></script>
+  </div>
 </body>
 
 </html>
