Update background color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div id="root">
+  <div id="root" class="root-container">
     <script type="module" src="/src/main.jsx"></script>
   </div>
 </body>
